--- a/index.html
+++ b/index.html
@@ -450,7 +450,28 @@ var main = document.getElementsByTagName('main')[0];
 <!-- <option value="category_d">Category 4</option> -->
 </select></form>
 <div class="clearboth"></div>
-<div class="wrap-outer wrap-flex" id="job-readiness-articles"></div>
+<div class="month-holder">
+	<ul>
+		<li><button type="button" disabled>January</button><span class="count"></span></li>
+		<li><button type="button" disabled>February</button type="button" disabled><span class="count"></span></li>
+		<li><button type="button" disabled>March</button type="button" disabled><span class="count"></span></li>
+		<li><button type="button" disabled>April</button type="button" disabled><span class="count"></span></li>
+		<li><button type="button" disabled>May</button type="button" disabled><span class="count"></span></li>
+		<li><button type="button" disabled>June</button type="button" disabled><span class="count"></span></li>
+		<li><button type="button" disabled>July</button type="button" disabled><span class="count"></span></li>
+			<li><button type="button" disabled>August</button type="button" disabled><span class="count"></span></li>
+			<li><button type="button" disabled>September</button type="button" disabled><span class="count"></span></li>
+			<li><button type="button" disabled>October</button type="button" disabled><span class="count"></span></li>
+			<li><button type="button" disabled>November</button type="button" disabled><span class="count"></span></li>
+			<li><button type="button" disabled>December</button type="button" disabled><span class="count"></span></li>
+		</ul>
+
+</div>
+<div class="wrap-outer wrap-flex" id="job-readiness-articles">
+	<div class="spinner_holder">
+	<div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+	</div>
+</div>
 <div class="outer-bottom-panels">
 <div class="wrap-flex wrap-outer">
 <div class="flex-col-2">
